--- a/.github/workflows/刘梦娇.yml
+++ b/.github/workflows/刘梦娇.yml
@@ -24,8 +24,8 @@ jobs:
          
     - name: auto study
       env:
-        username: ${{secrets.USERNAME}}17861627267
-        password: ${{secrets.PWD}}17861627267han
+        username: ${{secrets.USERNAME}}18250138952
+        password: ${{secrets.PWD}}ldb52099724.
         pubKey: ${{secrets.PUB_KEY}}A7E74D2B6282AEB1C5EA3C28D25660A7
         ocrSecret: ${{secrets.OCR_SECRET_KEY}}9CpRMi26Qx81by2G1qWm2QtQaAyu6l80
         ocrKey: ${{secrets.OCR_API_KEY}}GooCgj6HftqQNoSiyGGKoDHm
